<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcomebg"
    tools:context=".WelcomeActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="FEATURES"
                android:textColor="@color/white"
                android:textSize="40dp" />

            <LinearLayout
                android:id="@+id/btnDictionary"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/dictionarybg" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="65dp"
                        android:text="DICTIONARY"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:text="@string/DICTIONARYDesc"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textStyle="italic"
                    android:textSize="14dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnNASA"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/covidbg" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="65dp"
                        android:text="COVID-19 TRACKER"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:text="@string/NASADesc"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textStyle="italic"
                    android:textSize="14dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnJokes"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/laugh" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="65dp"
                        android:text="ENTERTAINMENT"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/JOKESDesc"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textStyle="italic"
                    android:textSize="14dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnPokedex"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/pokebg" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="65dp"
                        android:text="POKEDEX"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/POKEDEXDesc"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textStyle="italic"
                    android:textSize="14dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnMessenger"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/weatherbg" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="65dp"
                        android:text="WEATHER FORECAST"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/WEATHERDesc"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textStyle="italic"
                    android:textSize="14dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginTop="50dp">

                <Button
                    android:id="@+id/btnLogOut"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Log Out"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>

</LinearLayout>